<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MainActivity"
    android:background="#18859C">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_title"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="12 Juni 2022"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cdvWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#76ABB6"
        app:layout_constraintBottom_toBottomOf="@+id/txtDate"
        app:layout_constraintEnd_toStartOf="@+id/cdvLastWeek"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/this_week"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cdvLastWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/cdvWeek"
        app:layout_constraintEnd_toEndOf="@+id/cdvStatusBar"
        app:layout_constraintTop_toTopOf="@id/cdvWeek">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/last_week" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cdvStatusBar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/cdvLastWeek">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dayOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/dayTwo"
                app:layout_constraintEnd_toStartOf="@+id/dayTwo"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="145dp"
                android:backgroundTint="#BEE3FE"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/dayOne"
                app:layout_constraintEnd_toEndOf="@+id/dayOne"
                app:layout_constraintStart_toStartOf="@+id/dayOne" />

            <TextView
                android:id="@+id/dayTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/dayThree"
                app:layout_constraintEnd_toStartOf="@+id/dayThree"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dayOne" />

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="87dp"
                android:backgroundTint="#BEE3FE"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/dayTwo"
                app:layout_constraintEnd_toEndOf="@+id/dayTwo"
                app:layout_constraintStart_toStartOf="@+id/dayTwo" />

            <TextView
                android:id="@+id/dayThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/dayFour"
                app:layout_constraintEnd_toStartOf="@+id/dayFour"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dayTwo" />

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="90dp"
                android:backgroundTint="#BEE3FE"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/dayThree"
                app:layout_constraintEnd_toEndOf="@+id/dayThree"
                app:layout_constraintStart_toStartOf="@+id/dayThree" />

            <TextView
                android:id="@+id/dayFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                android:textStyle="bold"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dayFive"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dayThree" />

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="110dp"
                android:backgroundTint="#BEE3FE"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/dayFour"
                app:layout_constraintEnd_toEndOf="@+id/dayFour"
                app:layout_constraintStart_toStartOf="@+id/dayFour" />

            <TextView
                android:id="@+id/dayFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/dayFour"
                app:layout_constraintEnd_toStartOf="@+id/daySix"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dayFour" />

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="120dp"
                android:backgroundTint="#BEE3FE"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/dayFive"
                app:layout_constraintEnd_toEndOf="@+id/dayFive"
                app:layout_constraintStart_toStartOf="@+id/dayFive" />


            <TextView
                android:id="@+id/daySix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/dayFive"
                app:layout_constraintEnd_toStartOf="@+id/daySeven"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/dayFive" />

            <androidx.cardview.widget.CardView
                android:layout_width="20dp"
                android:layout_height="110dp"
                android:backgroundTint="#5BB6FF"
                app:cardCornerRadius="3dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/daySix"
                app:layout_constraintEnd_toEndOf="@+id/daySix"
                app:layout_constraintStart_toStartOf="@+id/daySix" />

            <TextView
                android:id="@+id/daySeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/daySix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/daySix" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/txtTitleOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_title"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
       app:layout_constraintTop_toBottomOf="@id/cdvStatusBar"
        app:layout_constraintStart_toStartOf="@id/cdvStatusBar"/>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/rvMain" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMain"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cdvStatusBar"
        app:layout_constraintStart_toStartOf="@+id/txtTitleOrder"
        app:layout_constraintTop_toBottomOf="@id/txtTitleOrder"
        tools:listitem="@layout/phone_item" />



</androidx.constraintlayout.widget.ConstraintLayout>